# Quorum

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  improvement.txt  technical_documentation.txt
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8e750286004e_initial.py  add_section_title_to_message_citations.py  bd1e06811925_add_source_type_to_source_documents.py  f24358c70473_merge_heads.py  f3c52699384a_add_updated_at_to_chat_messages.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  documents.py
backend/app/core/: deps.py  logging.py  rate_limiter.py
backend/app/domain/: auth.py  comparison.py  coverage.py  embeddings.py  extraction.py  rag.py  retrieval.py  revenue_mix.py  risk_diff.py  titles.py  workflows.py
backend/app/models/: __init__.py  base.py  chat.py  document.py  profile.py
backend/app/schemas/: __init__.py  auth.py  chat.py  document.py  retrieval.py
backend/scripts/: ingest_html.py  run_eval_suite.sh  sample_retrieval_results.py
backend/tests/: eval_suite.py  post_test.py  skipped_tests.txt  smoke_test_queries.py  test_auth.py  test_extraction.py  test_rag.py  test_retrieval.py  test_retrieval_eval.py  test_risk_diff.py
data/: README.md
docs/: architecture.md  client-breif.md  interview-prep.md  pipeline-flow.md  todos.md
frontend/: Dockerfile  Dockerfile.railway  README.md  index.html  nginx.conf  nginx.conf.railway  package-lock.json  package.json
(+20 files in other folders)
